MDEV-7448 - mtr may leave stale mysqld

Let mtr handle SIGHUP the same way as SIGINT. This solves stale mysqld processes
left after broken/closed ssh connection.